--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -31,12 +31,13 @@
         </div>
     </div>
 
+
     <div class="row">
         <div class="col-md-12">
          <h3>KEY METRICS</h3>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockonhand">
-                    <span class="quality_test__metric"> {{ totalstockathand | number:0 }} </span>
+                    <span class="quality_test__metric"> {{ shell.totalstockathand | number:0 }} </span>
                     <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
                 </a>
             </div>
