--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -23,10 +23,10 @@
             </div>
        </div>
 
-        <table ng-table="vm.tableParams" class="table" show-filter="false">
-            <tr ng-repeat="row in vm.data | filter:searchText">
-                <td title="'District'" sortable="'row.district'">{{row.district}}</td>
-                <td title="'Units'" sortable="'row.stockathand'">{{row.stockathand}}</td>
+        <table ng-table="vm.tableParams" class="table table-condensed table-striped" show-filter="false">
+            <tr ng-repeat="row in $data | filter:searchText">
+                <td title="'District'" >{{row.district}}</td>
+                <td title="'Units'" >{{row.stockathand}}</td>
             </tr>
         </table>
     </div>
