--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -25,7 +25,7 @@
 
         <table ng-table="vm.tableParams" class="table table-condensed table-striped" show-filter="false">
             <tr ng-repeat="row in $data | filter:searchText">
-                <td title="'District'" >{{row.district__name}}</td>
+                <td title="'Months'" >{{vm.getMonthName(row.month)}}</td>
                 <td title="'Units'" >{{row.stockathand | number:0}}</td>
             </tr>
         </table>
