--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -25,8 +25,10 @@
 
         <table ng-table="vm.tableParams" class="table table-condensed table-striped" show-filter="false">
             <tr ng-repeat="row in $data | filter:searchText">
-                <td title="'Months'" >{{vm.getMonthName(row.month)}}</td>
-                <td title="'Units'" >{{row.stockathand | number:0}}</td>
+                <td title="'District'" >{{vm.district_name}}</td>
+                <td title="'Units'" >{{row.consumed | number:0}}</td>
+                <td title="'Min Stock'" >{{vm.stock_requirement__minimum}}</td>
+                <td title="'Max Stock'" >{{vm.stock_requirement__maximum}}</td>
             </tr>
         </table>
     </div>
