--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -5,12 +5,12 @@
 
 
 
-    <div class="col-md-7">
+    <div class="col-md-6">
         <div class="page_graph">
             <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-6">
 
        <div id="custom-search-input">
             <div class="input-group col-md-12">
@@ -28,7 +28,9 @@
                 <td title="'District'" >{{row.district_name}}</td>
                 <td title="'At Hand'" >{{row.at_hand | number:0}}</td>
                 <td title="'Min Stock'" >{{row.stock_requirement__minimum}}</td>
-                <td title="'Max Stock'" >{{row.stock_requirement__maximum}}</td>
+                <td title="'Max'" >{{row.stock_requirement__maximum}}</td>
+                <td title="'Min (%)'" >{{(row.at_hand / row.stock_requirement__minimum * 100) - 100 | number:0}}%</td>
+                <td title="'Max (%)'" >{{(row.at_hand / row.stock_requirement__maximum * 100) - 100 | number:0}}%</td>
             </tr>
         </table>
     </div>
