--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -79,8 +79,8 @@
 <script type="text/javascript" src='{% static "vendor/ng-table/dist/ng-table.js"%}'></script>
 <script type="text/javascript" src='{% static "app/app.js" %}'></script>
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
-<script type="text/javascript" src='{% static "app/shared/filter.service.js" %}'></script>
-<script type="text/javascript" src='{% static "app/shared/report.service.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/filterService.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/stockService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/mainController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
