--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -41,6 +41,12 @@
                     <span class="quality_test__description">{{"Stock At Hand" | uppercase}}</span>
                 </a>
             </div>
+              <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="stock.stockedout">
+                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__description">{{"Stocked out" | uppercase}}</span>
+                </a>
+            </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.amc">
                     <span class="quality_test__metric"> 0</span>
