--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -3,7 +3,7 @@
 
     <h4 class="text-left">STOCK ON HAND</h4>
 
-    <h3 class="text-right">Arrange By Performance</h3>
+    <h3 class="text-right">Sort By Performance</h3>
 
     <div class="col-md-6">
         <div class="page_graph">
@@ -27,34 +27,38 @@
 
              <thead>
                 <tr>
-                    <td>
+                    <th>
                         <a href="#" ng-click="sortType = 'District'; sortReverse = !sortReverse">
-                        District
-                        <span ng-show="sortType == 'District' && !sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="sortType == 'District' && sortReverse" class="fa fa-caret-up"></span>
+                            <button ng-click="sortBy('District')">District</button>
+                            <span class="sortorder" ng-show="propertyName === 'District'" ng-class="{reverse: reverse}"></span>
+                            <span ng-show="sortType == 'District' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'District' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
-                    </td>
-                    <td>
+                    </th>
+                    <th>
                         <a href="#" ng-click="sortType = 'At Hand'; sortReverse = !sortReverse">
-                        At Hand
-                        <span ng-show="sortType == 'At Hand' && !sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="sortType == 'At Hand' && sortReverse" class="fa fa-caret-up"></span>
+                            <button ng-click="sortBy('At Hand')">At Hand</button>
+                            <span class="sortorder" ng-show="propertyName === 'At Hand'" ng-class="{reverse: reverse}"></span>
+                            <span ng-show="sortType == 'At Hand' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'At Hand' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
-                    </td>
-                    <td>
+                    </th>
+                    <th>
                         <a href="#" ng-click="sortType = 'Min'; sortReverse = !sortReverse">
-                        Min
-                        <span ng-show="sortType == 'Min' && !sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="sortType == 'Min' && sortReverse" class="fa fa-caret-up"></span>
+                            <button ng-click="sortBy('Min')">Min</button>
+                            <span class="sortorder" ng-show="propertyName === 'Min'" ng-class="{reverse: reverse}"></span>
+                            <span ng-show="sortType == 'Min' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'Min' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
-                    </td>
-                    <td>
+                    </th>
+                    <th>
                         <a href="#" ng-click="sortType = 'Max'; sortReverse = !sortReverse">
-                        Max
-                        <span ng-show="sortType == 'Max' && !sortReverse" class="fa fa-caret-down"></span>
-                        <span ng-show="sortType == 'Max' && sortReverse" class="fa fa-caret-up"></span>
+                            <button ng-click="sortBy('Max')">Max</button>
+                            <span class="sortorder" ng-show="propertyName === 'Max'" ng-class="{reverse: reverse}"></span>
+                            <span ng-show="sortType == 'Max' && !sortReverse" class="fa fa-caret-down"></span>
+                            <span ng-show="sortType == 'Max' && sortReverse" class="fa fa-caret-up"></span>
                         </a>
-                    </td>
+                    </th>
                 </tr>
              </thead>
 
