--- a/dashboard/static/css/additional-styles.css
+++ b/dashboard/static/css/additional-styles.css
@@ -58,6 +58,7 @@ h1, h2, h3, h4, h5, h6, th {
     border-right: 1px solid black;
     border-bottom: 0px;
     margin-bottom: -2px;
+    margin-top: 1px;
     z-index: 900;
     background: #fff;
 }
@@ -154,6 +155,10 @@ h1, h2, h3, h4, h5, h6, th {
     font-weight: bold;
 }
 
+#map {
+    margin-left: 20px;
+}
+
 #map #tooltip {
     text-align: center;
 }
@@ -172,8 +177,8 @@ h1, h2, h3, h4, h5, h6, th {
 
 .map-container #gend {
     position: absolute;
-    width: 150px;
-    left: -30px;
+    width: 155px;
+    left: -35px;
     top: 130px;
     overflow: hidden;
 }
