--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -59,7 +59,7 @@
     <div class="row" id="header">
                 <div class="col-md-2" id="coart-of-arms" align="left"><img src='{% static "images/coart-of-arms.png" %}'></div>
                 <div class="col-md-8" id="site-name">
-                    <div class="major"><h3 class="text-center"><b>MINISTRY OF HEALTH: UNEPI EPI DASHBOARD </b></h3></div>
+                    <div class="major"><h3 class="text-center"><b>MINISTRY OF HEALTH: UNEPI DASHBOARD </b></h3></div>
                     <br>
                     <div class="minor"><h6 class="text-center"><b>REPUBLIC OF UGANDA</b></h6></div>
 
